--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
           devices:
             - driver: nvidia
               count: 0
-              capabilities: [gpu]
+              capabilities: gpu
     networks:
       - app_network
 
