--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,6 @@ version: "3.8"
 
 services:
   open-webui:
-    build:
-      context: .
-      args:
-        OLLAMA_BASE_URL: "/ollama"
-      dockerfile: Dockerfile
     image: ghcr.io/open-webui/open-webui:main
     container_name: open-webui
     volumes:
@@ -23,6 +18,28 @@ services:
     restart: unless-stopped
     networks:
       - app_network
+
+  # localai:
+  #   image: localai/localai:latest
+  #   container_name: localai
+  #   restart: unless-stopped
+  #   ports:
+  #     - "8080:8080"
+  #   environment:
+  #     - DEBUG=true
+  #     - MODELS_PATH=/models
+  #   volumes:
+  #     - /mnt/debian.data/localai_models:/models
+  #     - /mnt/debian.data/localai_data:/data
+  #   deploy:
+  #     resources:
+  #       reservations:
+  #         devices:
+  #           - driver: nvidia
+  #             count: 0
+  #             capabilities: [gpu]
+  #   networks:
+  #     - app_network
 
   ollama:
     image: ollama/ollama:latest
